--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://DanielTran0.github.io/shopping_cart",
+  "homepage": "http://DanielTran0.github.io/Shopping_Cart",
   "name": "shopping_cart",
   "version": "0.1.0",
   "private": true,
